--- a/src/index.html
+++ b/src/index.html
@@ -6,41 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
     <title>Weather App</title>
 </head>
 
 <body>
 
     <div class="container">
-        <main class="weather row">
-            <div class="weather__info col-md-7 mt-5 p-5 mx-auto bg-white rounded">
-                <div class="text-center pb-5">
-                    <h2>Weather App</h2>
+        <main class="weather row px-2 pt-5">
+            <div class="weather__info col-sm-12 col-md-10 mt-5 p-5 mx-auto bg-white rounded">
+                <h1 class="weather__heading text-center"><strong>Weather App</strong></h1>
+                <div class="pt-3">
+                    <div class="location text-center pb-3">
+                        <span data-selector="name"></span>
+                        <span data-selector="country"></span>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between p-md-3">
+                        <div>
+                            <h2 class="text-center pb-3" data-selector="temperature_c"></h2>
+                            <div class="d-flex flex-row">
+                                <p data-selector="description"></p>
+                                <p data-selector="icon"></p>
+                            </div>
+                            <p data-selector="feelslike_c"></p>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <p data-selector="pressure"></p>
+                            <p data-selector="humidity"></p>
+                            <p data-selector="wind"></p>
+                        </div>
+                    </div>
+                    <p class="text-center" data-selector="time"></p>
                 </div>
-                <div data-selector="name"></div>
-                <div data-selector="country"></div>
-                <div data-selector="time"></div>
-                <div>
-                    <div data-selector="temperature_c"></div>
-                    <div data-selector="temperature_f"></div>
-
+                <div class="input-group-append col-md-7 mx-auto pt-3">
+                    <input type="text" class="form-control" data-selector="" placeholder="Your location">
+                    <button class="btn btn-dark input-group-text" data-selector="button"><i class="fas fa-search"></i></button>
                 </div>
-                <div>
-                    <div data-selector="feelslike_c"></div>
-                    <div data-selector="feelslike_f"></div>
+                <div class="row mt-3">
+                    <div class="col-sm-12 text-center">
+                        <small>Developed with vanilla JS</small>
+                        <br>
+                        <small>by Valeriia Rieznik</small>
+                    </div>
                 </div>
-                <div data-selector="description"></div>
-                <div data-selector="icon"></div>
-                <div data-selector="pressure"></div>
-                <div data-selector="humidity"></div>
-                <div data-selector="wind"></div>
-
-                <div class="input-group-append col-md-7 mx-auto pt-5">
-                    <input type="text" class="form-control" placeholder="Your location">
-                    <span class="input-group-text"><i class="fas fa-search"></i></span>
-                </div>
-
             </div>
+
         </main>
 
     </div>
