--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container">
-        <main class="weather row px-2 pt-5">
+        <main class="weather row px-2 pt-5" data-selector="weather">
             <div class="weather__info col-sm-12 col-md-10 mt-5 p-5 mx-auto bg-white rounded">
                 <h1 class="weather__heading text-center"><strong>Weather App</strong></h1>
                 <div class="pt-3">
@@ -39,7 +39,7 @@
                     <p class="text-center" data-selector="time"></p>
                 </div>
                 <div class="input-group-append col-md-7 mx-auto pt-3">
-                    <input type="text" class="form-control" data-selector="" placeholder="Your location">
+                    <input type="text" class="form-control" data-selector="location" placeholder="Your location">
                     <button class="btn btn-dark input-group-text" data-selector="button"><i class="fas fa-search"></i></button>
                 </div>
                 <div class="row mt-3">
