Refactoring styles and markup, get and display fahrenheit temperature

--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,20 @@
         <main class="weather row px-2 pt-5" data-selector="weather">
             <div class="weather__info col-sm-12 col-md-10 col-lg-7 mt-5 p-3 mx-auto bg-white rounded text-center">
                 <h1 class="weather__heading"><strong>Weather App</strong></h1>
-                <div class="location pb-3">
+                <div class="weather__location pb-3">
                     <span data-selector="name"></span>
                     <span data-selector="country"></span>
-                    <h2 class="text-center pt-2" data-selector="temperature_c"></h2>
+                    <div class="d-flex flex-row justify-content-center">
+                        <h2 class="text-center pt-2" data-selector="temperature"></h2>
+                        <span class="pl-2 pt-2" data-selector="celcius">&#176;C /</span>
+                        <span class="pt-3" data-selector="fahrenheit">&#176;F</span>
+                    </div>
                     <span data-selector="description"></span>
                     <span><img class="pl-4" data-selector="icon"></span>
                 </div>
                 <div class="d-flex flex-row justify-content-between justify-content-md-around px-3 py-2">
                     <div class="d-flex flex-column">
-                        <span class="pb-3" data-selector="feelslike_c"></span>
+                        <span class="pb-3" data-selector="feelslike"></span>
                         <span data-selector="pressure"></span>
                     </div>
                     <div class="d-flex flex-column">
