--- a/src/index.html
+++ b/src/index.html
@@ -40,12 +40,12 @@
                 <div class="text-center py-4" data-selector="time"></div>
                 <div class="">
                     <div class="input-group-append col-md-7 mx-auto">
-                        <input type="text" class="form-control" data-selector="location" placeholder="Your location">
+                        <input type="text" class="form-control" data-selector="input" placeholder="Enter a city">
                         <button class="btn btn-dark input-group-text" data-selector="button"><i class="fas fa-search"></i></button>
                     </div>
                     <div class="input-group-append col-md-7 mx-auto pt-3">
                         <input type="text" class="form-control" data-selector="myLocation" placeholder="My location">
-                        <button class="btn btn-dark input-group-text" data-selector="button"><i class="fa fa-map-marker"></i></button>
+                        <button class="btn btn-dark input-group-text" data-selector="myLocation"><i class="fa fa-map-marker"></i></button>
                     </div>
                 </div>
                 <div class="row mt-3">
