--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
 <body>
 
     <div class="container">
-        <main class="weather row px-2 pt-5" data-selector="weather">
+        <main class="weather row px-2 py-5" data-selector="weather">
             <div class="weather__info col-sm-12 col-md-10 col-lg-7 mt-5 p-3 mx-auto bg-light rounded text-center">
                 <h1 class="weather__heading pt-3"><strong>Weather App</strong></h1>
-                <div class="weather__location pb-3">
+                <div class="weather__location pb-3 d-none" data-selector="weather-location">
                     <span data-selector="name"></span>
                     <span data-selector="country"></span>
                     <div class="d-flex flex-row justify-content-center">
@@ -27,7 +27,7 @@
                     <span data-selector="description"></span>
                     <span><img class="pl-4" data-selector="icon"></span>
                 </div>
-                <div class="d-flex flex-row justify-content-between justify-content-md-around px-3 py-2">
+                <div class="d-none flex-row justify-content-between justify-content-md-around px-3 py-2" data-selector="weather-results">
                     <div class="d-flex flex-column">
                         <span class="pb-3" data-selector="feelslike"></span>
                         <span data-selector="pressure"></span>
@@ -38,14 +38,18 @@
                     </div>
                 </div>
                 <div class="text-center py-4" data-selector="time"></div>
-                <div class="">
-                    <div class="input-group-append col-md-7 mx-auto">
-                        <input type="text" class="form-control" data-selector="input" placeholder="Enter a city">
-                        <button class="btn btn-dark input-group-text" data-selector="button"><i class="fas fa-search"></i></button>
+                <div>
+                    <div class="input-group">
+                        <div class="col-md-7 mx-auto d-flex flex-row">
+                            <input type="text" class="form-control border-secondary" data-selector="input" placeholder="Enter a city">
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary" type="button" data-selector="button"><i class="fas fa-search"></i></button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="input-group-append col-md-7 mx-auto pt-3">
-                        <input type="text" class="form-control" data-selector="myLocation" placeholder="My location">
-                        <button class="btn btn-dark input-group-text" data-selector="myLocation"><i class="fa fa-map-marker"></i></button>
+                    <div class="col-md-7 mx-auto pt-3 d-flex flex-row">
+                        <button class="btn btn-outline-secondary btn-block" type="button" data-selector="myLocation">My location</button>
+                        <button class="btn btn-outline-secondary" type="button" data-selector="myLocation"><i class="fa fa-map-marker"></i></button>
                     </div>
                 </div>
                 <div class="row mt-3">
