refactoring styles,add alert message

--- a/src/index.html
+++ b/src/index.html
@@ -38,20 +38,22 @@
                     </div>
                 </div>
                 <div class="text-center py-4" data-selector="time"></div>
-                <div>
-                    <div class="input-group">
-                        <div class="col-md-7 mx-auto d-flex flex-row">
-                            <input type="text" class="form-control border-secondary" data-selector="input" placeholder="Enter a city">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button" data-selector="button"><i class="fas fa-search"></i></button>
-                            </div>
+                <div class="row">
+                    <div class="col-sm-12 pb-4" data-selector="alert"></div>
+                </div>
+                <div class="input-group">
+                    <div class="col-md-7 mx-auto d-flex flex-row">
+                        <input type="text" class="form-control border-secondary" data-selector="input" placeholder="Enter a city">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="button" data-selector="button"><i class="fas fa-search"></i></button>
                         </div>
                     </div>
-                    <div class="col-md-7 mx-auto pt-3 d-flex flex-row">
-                        <button class="btn btn-outline-secondary btn-block" type="button" data-selector="myLocation">My location</button>
-                        <button class="btn btn-outline-secondary" type="button" data-selector="myLocation"><i class="fa fa-map-marker"></i></button>
-                    </div>
                 </div>
+                <div class="col-md-7 mx-auto pt-3 d-flex flex-row">
+                    <button class="btn btn-outline-secondary btn-block" type="button" data-selector="myLocation">My location</button>
+                    <button class="btn btn-outline-secondary" type="button" data-selector="myLocation"><i class="fa fa-map-marker"></i></button>
+                </div>
+
                 <div class="row mt-3">
                     <div class="col-sm-12 text-center">
                         <small>Developed with vanilla JS</small>
