Implementing change active state units functionality

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="col-md-7 mx-auto pt-3 d-flex flex-row">
-                    <button class="btn btn-outline-secondary btn-block" type="button" data-selector="myLocation">My location <i class="fa fa-map-marker"></i></button>
+                    <button class="btn btn-outline-secondary btn-block" type="button" data-selector="myLocation">My location<i class="fa fa-map-marker float-right pt-1"></i></button>
 
                 </div>
 
